; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_linux_signals.c_signal_handler.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_linux_signals.c_signal_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@signalcaught = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [53 x i8] c"DOUBLE SIGNAL FAULT: Received signal %d, exiting...\0A\00", align 1
@qtrue = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [32 x i8] c"Received signal %d, exiting...\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @signal_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @signal_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @signalcaught, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = call i32 @Sys_Exit(i32 1)
  br label %9

9:                                                ; preds = %5, %1
  %10 = load i64, i64* @qtrue, align 8
  store i64 %10, i64* @signalcaught, align 8
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  %13 = call i32 (...) @GLimp_Shutdown()
  %14 = call i32 @Sys_Exit(i32 0)
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @Sys_Exit(i32) #1

declare dso_local i32 @GLimp_Shutdown(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
